--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <h1 class="game-title">Dots and Boxed</h1>
   <div class="btn-group">
     <button class="btn-primary">
       Apply & Start
