--- a/index.html
+++ b/index.html
@@ -5,13 +5,55 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
 
- 
+
   <script language="javascript" type="text/javascript" src="game.js"></script>
+
+  <link
+    href="https://fonts.googleapis.com/css?family=Abril+Fatface|Luckiest+Guy|Orbitron|Russo+One|Shadows+Into+Light|Teko&display=swap"
+    rel="stylesheet">
 
   <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+
+  <div class="game-menu visible">
+    <div class="frame1">
+      <h1 class="logo">Dots And Boxes</h1>
+    </div>
+    <div class="frame">
+      <div class="btn-group">
+        <button class="button" id="playBtn" type="button">
+          <h2>Play GAME</h2>
+        </button><br>
+        <button class="button" type="button">
+          <h2>TUTORIAL</h2>
+        </button>
+      </div>
+    </div>
+  </div>
+
+
+
+
+  <script>
+
+    const playBtn = document.querySelector('#playBtn');
+    const gameMenu = document.querySelector('.game-menu')
+
+    playBtn.addEventListener('click', () => {
+      GameRun = !GameRun;
+      setTimeout(() => {
+        isShowGameplay = true
+      }, 100);
+
+      gameMenu.classList.remove('visible')
+    })
+
+
+  </script>
+
+
 </body>
 
 </html>
